<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="theme_of_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Привет, Android-разработка — это круто!</string>
    <string name="email">marugish@yandex.ru</string>
    <string name="address">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="track_artist_and_duration">Исполнитель и длительность</string>
    <string name="track_name">Название трека</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="network_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="placeholder">placeholder</string>
    <string name="plusbutton">plusButton</string>
    <string name="playbutton">playButton</string>
    <string name="likebutton">likeButton</string>
    <string name="artist_name">Артист</string>
    <string name="play_time">00:00</string>
    <string name="no_preview_track">Трек не имеет аудио для прослушивания</string>
    <string name="load_error">Произошла ошибка загрузки трека</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist_name">Название*</string>
    <string name="new_playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="addphoto">addPhoto</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="playlistimage">playlistImage</string>
    <string name="playlist_name">Название плейлиста</string>
    <string name="trackimage">TrackImage</string>
    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
</resources>

