<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/HeadingTextStyle"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_start_top_text"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginBottom="@dimen/margin_bottom_heading_layout" />

    <Button
        android:id="@+id/button_search"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/default_margin"
        app:icon="@drawable/search"
        android:text="@string/search" />

    <Button
        android:id="@+id/button_media_library"
        style="@style/ButtonStyle"
        app:icon="@drawable/media_library"
        android:text="@string/media_library" />

    <Button
        android:id="@+id/button_settings"
        style="@style/ButtonStyle"
        app:icon="@drawable/settings"
        android:text="@string/settings" />

</LinearLayout>