<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/default_margin_heading"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/default_margin_heading" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="durationTextView, countryTextView"
        app:barrierDirection="end" />

    <!-- До барьера -->
    <TextView
        android:id="@+id/durationTextView"
        android:text="@string/duration"
        style="@style/InfoPlayStyle"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@+id/albumTextView" />

    <TextView
        android:id="@+id/albumTextView"
        android:text="@string/album"
        style="@style/InfoPlayStyle"
        app:layout_constraintBottom_toTopOf="@+id/yearTextView" />

    <TextView
        android:id="@+id/yearTextView"
        android:text="@string/year"
        style="@style/InfoPlayStyle"
        app:layout_constraintBottom_toTopOf="@+id/genreTextView" />

    <TextView
        android:id="@+id/genreTextView"
        android:text="@string/genre"
        style="@style/InfoPlayStyle"
        app:layout_constraintBottom_toTopOf="@+id/countryTextView" />

    <TextView
        android:id="@+id/countryTextView"
        android:text="@string/country"
        style="@style/InfoPlayStyle"
        android:layout_marginBottom="@dimen/track_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent" />


    <!-- После барьера -->
    <TextView
        android:id="@+id/durationEditText"
        android:text="@string/duration"
        style="@style/ChangeableInfoPlayStyle"
        app:layout_constraintBaseline_toBaselineOf="@+id/durationTextView" />

    <TextView
        android:id="@+id/albumEditText"
        android:text="@string/album"
        style="@style/ChangeableInfoPlayStyle"
        app:layout_constraintBaseline_toBaselineOf="@+id/albumTextView" />

    <TextView
        android:id="@+id/yearEditText"
        android:text="@string/year"
        style="@style/ChangeableInfoPlayStyle"
        app:layout_constraintBaseline_toBaselineOf="@+id/yearTextView" />

    <TextView
        android:id="@+id/genreEditText"
        android:text="@string/genre"
        style="@style/ChangeableInfoPlayStyle"
        app:layout_constraintBaseline_toBaselineOf="@+id/genreTextView" />

    <TextView
        android:id="@+id/countryText"
        android:text="@string/country"
        style="@style/ChangeableInfoPlayStyle"
        app:layout_constraintBaseline_toBaselineOf="@+id/countryTextView" />

    <!-- Длительность воспроизведения -->
    <TextView
        android:id="@+id/playDurationTextView"
        android:text="@string/play_time"
        style="@style/TrackHeadingPlayStyle"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textFontWeight="500"
        app:layout_constraintBottom_toTopOf="@+id/durationTextView"
        android:layout_marginBottom="@dimen/play_track_margin_bottom"/>

    <!-- Spread inside цепь -->
    <ImageButton
        android:id="@+id/plusButton"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:src="@drawable/plus_button"
        android:background="@null"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/leftBorder_header"
        app:layout_constraintTop_toTopOf="@id/playButton"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        android:contentDescription="@string/plusbutton" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:src="@drawable/play_button"
        app:layout_constraintBottom_toTopOf="@+id/playDurationTextView"
        app:layout_constraintEnd_toStartOf="@+id/likeButton"
        app:layout_constraintStart_toEndOf="@+id/plusButton"
        android:contentDescription="@string/playbutton" />

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="51dp"
        android:layout_height="51dp"
        app:layout_constraintEnd_toEndOf="@id/rightBorder_header"
        android:src="@drawable/like_button"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/plusButton"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        android:contentDescription="@string/likebutton" />

    <!-- Заголовок трека -->
    <TextView
        android:id="@+id/artistTextView"
        android:text="@string/artist_name"
        style="@style/TrackHeadingPlayStyle"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        android:layout_marginBottom="@dimen/track_margin_bottom"/>

    <TextView
        android:id="@+id/trackTextView"
        android:text="@string/track_name"
        style="@style/TrackHeadingPlayStyle"
        android:textSize="@dimen/heading_text_size"
        app:layout_constraintBottom_toTopOf="@+id/artistTextView"
        android:layout_marginBottom="@dimen/track_margin_borders"/>

    <!-- Картинка -->
    <ImageView
        android:id="@+id/trackImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintBottom_toTopOf="@+id/trackTextView"
        app:layout_constraintEnd_toEndOf="@id/rightBorder_header"
        app:layout_constraintStart_toStartOf="@id/leftBorder_header"
        app:layout_constraintTop_toBottomOf="@id/toolbar_play"
        android:layout_marginVertical="@dimen/default_margin_heading"
        tools:srcCompat="@drawable/placeholder"
        android:contentDescription="@string/placeholder" />

    <!-- Стрелочка -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_play"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="?attr/colorSecondary"
        android:layout_gravity="start"
        app:navigationIcon="@drawable/arrow_back"
        app:iconPadding="@dimen/icon_padding"
        app:buttonGravity="center_vertical" />

</androidx.constraintlayout.widget.ConstraintLayout>