<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".ui.mediaLibrary.activity.NewPlaylistFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_playlist"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_layout_size"
        android:background="?attr/colorSecondary"
        app:title="@string/new_playlist"
        style="@style/HeadingTextStyle"
        app:titleTextColor="?attr/textColor"
        android:layout_gravity="start"
        app:navigationIcon="@drawable/arrow_back"
        app:iconPadding="@dimen/icon_padding"
        app:buttonGravity="center_vertical" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp">

        <ImageView
            android:id="@+id/add_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"


            android:layout_gravity="center"



            tools:srcCompat="@drawable/add_photo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/add_photo_rectangle"
            android:scaleType="centerCrop"
            android:contentDescription="TODO"/>


    </FrameLayout>





    <EditText
        android:id="@+id/new_playlist_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_playlist_height"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:padding="@dimen/default_margin"

        android:layout_gravity="center"

        android:hint="@string/new_playlist_name"
        android:textColorHint="?attr/textColor"
        android:textColor="?attr/textColor"
        android:inputType="text"
        android:lines="1"
        android:maxLength="40"
        android:imeOptions="actionDone"
        android:background="@drawable/edit_text_rectangle"
        android:textCursorDrawable="@drawable/cursor"/>

    <EditText
        android:id="@+id/new_playlist_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_playlist_height"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:padding="@dimen/default_margin"

        android:layout_gravity="center"

        android:hint="@string/new_playlist_description"
        android:textColorHint="?attr/textColor"
        android:textColor="?attr/textColor"
        android:inputType="text"
        android:lines="1"
        android:maxLength="40"
        android:imeOptions="actionDone"
        android:background="@drawable/edit_text_rectangle"
        android:textCursorDrawable="@drawable/cursor" />

    <Button
        android:id="@+id/createNewPlaylist"
        android:layout_width="match_parent"
        android:layout_height="44dp"

        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="@dimen/margin_bottom_heading_layout"



        android:text="@string/create"
        android:textSize="@dimen/default_text_size"
        android:textColor="?attr/colorPrimaryVariant"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:textAllCaps="false"
        android:background="@drawable/button_tap_selector"/>



</LinearLayout>