<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/settings_frame_layout_size"
    android:orientation="horizontal"
    android:gravity="center">

    <ImageView
        android:id="@+id/track_image"
        android:layout_width="@dimen/track_image_size"
        android:layout_height="@dimen/track_image_size"
        android:layout_marginStart="@dimen/track_margin_borders"
        android:layout_marginEnd="@dimen/track_margin_between"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_name_text"
            style="@style/RegularTextStyle"
            android:textSize="@dimen/default_text_size"
            android:textColor="?attr/nameTrackText"
            android:text="@string/track_name"
            android:ellipsize="end"
            android:maxLines="1"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/artist_name_text"
                style="@style/RegularTextStyle"
                android:textColor="?attr/artistText"
                android:textSize="@dimen/track_name_size"
                android:text="@string/artist_name"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constrainedWidth="true"/>

            <ImageView
                android:id="@+id/dot"
                android:src="@drawable/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/artist_name_text"
                app:layout_constraintEnd_toStartOf="@+id/durationTrack"
                app:layout_constraintStart_toEndOf="@+id/artist_name_text" />

            <TextView
                android:id="@+id/durationTrack"
                style="@style/RegularTextStyle"
                android:textColor="?attr/artistText"
                android:textSize="@dimen/track_name_size"
                android:text="@string/duration"
                app:layout_constraintBottom_toBottomOf="@+id/dot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dot" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/arrow_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/track_margin_borders"
        android:layout_marginStart="@dimen/track_margin_between"
        android:src="@drawable/arrow_forward"/>
</LinearLayout>