<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    tools:context="com.example.playlistmaker.ui.search.activity.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_layout_size">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_search"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_gravity="start"
            android:background="?attr/colorSecondary"
            app:title="@string/search"
            style="@style/HeadingTextStyle"
            app:titleTextColor="?attr/textColor"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/search"
            android:textColorHint="?attr/editIconColor"
            android:textColor="?attr/colorSecondaryVariant"
            android:inputType="text"
            android:lines="1"
            android:maxLength="40"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="8dp"
            android:paddingStart="10dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor" />

        <ImageView
            android:id="@+id/search_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="@dimen/default_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/clear"
            android:visibility="gone"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_marginTop="@dimen/progress_bar_margin"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="?attr/progressBarColor"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/history_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_text_height"
                android:text="@string/you_search"
                android:textSize="@dimen/placeholder_text_size"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_bottom_heading_layout"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_recycle_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/track_margin_between"
                android:visibility="gone"/>
            <Button
                android:id="@+id/clear_history_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/update_button_height"
                android:backgroundTint="?attr/textColor"
                android:text="@string/clear_history"
                android:layout_marginVertical="@dimen/margin_bottom_heading_layout"
                android:layout_gravity="center_horizontal"
                app:cornerRadius="@dimen/corner_radius_update_button"
                android:textSize="@dimen/default_text_size"
                android:textColor="?attr/colorSecondary"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500"
                android:textAllCaps="false"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/placeholder_image"
                android:layout_width="@dimen/not_found_or_network_image_placeholder"
                android:layout_height="@dimen/not_found_or_network_image_placeholder"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/not_found_or_network_image_placeholder_margin"/>

            <TextView
                android:id="@+id/placeholderMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_bottom_heading_layout"
                android:layout_marginTop="@dimen/default_margin"
                android:textAlignment="center"
                android:textSize="@dimen/placeholder_text_size"
                android:textColor="?attr/textColor"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="400"/>

            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/update_button_height"
                android:backgroundTint="?attr/textColor"
                android:text="@string/update"
                android:layout_marginTop="@dimen/margin_bottom_heading_layout"
                android:layout_gravity="center_horizontal"
                app:cornerRadius="@dimen/corner_radius_update_button"
                android:textSize="@dimen/default_text_size"
                android:textColor="?attr/colorSecondary"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500"
                android:textAllCaps="false"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                android:visibility="gone"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>